# parallel

./: README.md
lab2/1/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
lab2/1/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
lab2/2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
lab2/2/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
lab2/3/: CMakeLists.txt  main.cpp
lab2/3/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
lab3/: main.cpp
lab3/1/: main.cpp
lab3/1/tmp/: cmake_install.cmake  main
lab3/2/: CMakeLists.txt  main  main.cpp  pow_results.txt  sin_results.txt  sqrt_results.txt
lab3/2/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main  pow_results.txt  sin_results.txt  sqrt_results.txt
lab3/tmp/: CMakeCache.txt  Makefile  main
lab4/: lab4.py
lab5/: lab5_paral.py
